fix: workspace UI issues
